# BleeeeeefingRegularly

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: copy_from_template.yml  daily_cron.yml  make_template.yml  weekly_cron.yml
notion_to_slack/: .env.sample  __init__.py  bleeeeeefing.py
tests/: test_notion_to_slack.py
