[tool.poetry]
name = "notion_to_slack"
version = "0.1.0"
description = ""
authors = ["KindMaple <angelattack9759@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notion = "^0.0.28"
python-dotenv = "^0.15.0"
slack-sdk = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
daily = "notion_to_slack:daily_bleeeeeefing"
weekly = "notion_to_slack:weekly_bleeeeeefing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
